Updated plugin to only measure actual iterations vs also warmup ones